config/seaway/overlays/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaway-uploader
  namespace: seaway-system
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: seaway-controller
